--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 
 <!DOCTYPE html>
+<html lang="fr">
 <html>
 	<head>
-		<title> VOTRE TITRE </title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width" />
+		<title>Explorateur Bitcoin</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+		
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<script src="../custom.js"></script>
 	</head>
 	<body>
 		<h1>Explorateur Bitcoin</h1>
-		<h2>Kek</h2>
-		<h2>Explorateur Bitcoin</h2>
+		<h2>Emrin Angelov</h2>
+		
 	</body>
 </html>
