--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Explorateur Bitcoin</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 		
@@ -13,8 +13,10 @@
 		<script src="../custom.js"></script>
 	</head>
 	<body>
-		<h1>Explorateur Bitcoin</h1>
-		<h2>Emrin Angelov</h2>
+		<div class="jumbotron text-center">
+ 			<h1>IF - Explorateur Bitcoin</h1>
+  			<p>Emrin Angelov</p> 
+		</div>
 		
 	</body>
 </html>
