--- a/index.html
+++ b/index.html
@@ -11,12 +11,30 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src="../custom.js"></script>
+		<script>
+			var xmlhttp = new XMLHttpRequest();
+			xmlhttp.onreadystatechange = function() {
+    				if (this.readyState == 4 && this.status == 200) {
+        				var myObj = this.responseText;
+        				var jsonPretty = JSON.stringify(JSON.parse(myObj),null,2);
+        				document.getElementById("demo").innerHTML = jsonPretty;
+    				}
+			};
+			xmlhttp.open("GET", "https://api.blockcypher.com/v1/btc/main", true);
+			xmlhttp.send();
+		</script>
 	</head>
 	<body>
 		<div class="jumbotron text-center">
  			<h1>IF - Explorateur Bitcoin</h1>
   			<p>Emrin Angelov</p> 
 		</div>
-		
+		<div class="row">
+			<div class="col-lg-12 col-xs-6">
+    			<pre>
+        			<code id="demo" class="json kljs"></code>
+    			</pre>
+			</div>
+		</div>
 	</body>
 </html>
