--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     			</pre>
 			</div>
 		</div>
+		 <a href="https://emrin.github.io/X/bitcoin/index.html">Link to other page.</a> 
 	</body>
 </html>
