--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 		<script src="https://emrin.github.io/X/prg.js"></script>
 	</head>
 	<body>
+		<div class="container">
+ 			<h2>Tabs</h2>
+ 			<p>The .nav-tabs class is used to create navigation tabs:</p>                  
+  			<ul class="nav nav-tabs" role="tablist">
+    			<li class="active"><a href="#">Home</a></li>
+    			<li><a href="https://emrin.github.io/X/bitcoin/index.html">OtherPage</a></li>
+    			<li><a href="#">CSS</a></li>
+    			<li><a href="#">About</a></li>        
+ 		 	</ul>
+		</div>
 		<div class="jumbotron text-center">
  			<h1>IF - Explorateur Bitcoin</h1>
   			<p>Emrin Angelov</p> 
