--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
 	</head>
 	<body>
 		<div class="container">
- 			<h2>Tabs</h2>
- 			<p>The .nav-tabs class is used to create navigation tabs:</p>                  
   			<ul class="nav nav-tabs" role="tablist">
-    			<li class="active"><a href="#">Home</a></li>
-    			<li><a href="https://emrin.github.io/X/bitcoin/index.html">OtherPage</a></li>
-    			<li><a href="#">CSS</a></li>
-    			<li><a href="#">About</a></li>        
+    				<li class="active"><a href="https://emrin.github.io/X/">Home</a></li>
+    				<li><a href="https://emrin.github.io/X/bitcoin/index.html">Bitcoins</a></li>
+    				<li><a href="#">Yes</a></li>
+    				<li><a href="#">Ok</a></li>
  		 	</ul>
 		</div>
 		<div class="jumbotron text-center">
