--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -1,9 +1,51 @@
+
 <!DOCTYPE html>
+<html lang="fr">
 <html>
 	<head>
-		<title> 2nd repertoire </title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Explorateur Bitcoin</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+		
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<script src="../custom.js"></script>
+		<script src="https://emrin.github.io/X/prg.js"></script>
 	</head>
 	<body>
-		<h1>FUAAAA</h1>
+		<nav class="navbar navbar-default">
+  			<div class="container-fluid">
+    				<div class="navbar-header">
+      					<a class="navbar-brand" href="#">IF</a>
+    				</div>
+    				<ul class="nav navbar-nav">
+      					<li><a href="#">"https://emrin.github.io/X/index.html"</a></li>
+      					<li class="active"><a href="https://emrin.github.io/X/bitcoin/index.html">Page 1</a></li>
+      					<li><a href="#">Page 2</a></li>
+      					<li><a href="#">Page 3</a></li>
+    				</ul>
+  			</div>
+		</nav>
+		<div class="container">
+  			<ul class="nav nav-tabs" role="tablist">
+    				<li><a href="https://emrin.github.io/X/">Home</a></li>
+    				<li> class="active"<a href="https://emrin.github.io/X/bitcoin/index.html">Bitcoins</a></li>
+    				<li><a href="#">Yes</a></li>
+    				<li><a href="#">Ok</a></li>
+ 		 	</ul>
+		</div>
+		<div class="jumbotron text-center">
+ 			<h1>IF - Explorateur Bitcoin</h1>
+  			<p>Emrin Angelov</p> 
+		</div>
+		<div class="row">
+			<div class="col-lg-12 col-xs-6">
+    			<pre>
+        			<code id="demo" class="json kljs"></code>
+    			</pre>
+			</div>
+		</div>
+		 <a href="https://emrin.github.io/X/bitcoin/index.html">Link to other page.</a> 
 	</body>
 </html>
