--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -30,7 +30,7 @@
 		<div class="container">
   			<ul class="nav nav-tabs" role="tablist">
     				<li><a href="https://emrin.github.io/X/">Home</a></li>
-    				<li> class="active"<a href="https://emrin.github.io/X/bitcoin/index.html">Bitcoins</a></li>
+    				<li class="active"><a href="https://emrin.github.io/X/bitcoin/index.html">Bitcoins</a></li>
     				<li><a href="#">Yes</a></li>
     				<li><a href="#">Ok</a></li>
  		 	</ul>
