--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -20,7 +20,7 @@
       					<a class="navbar-brand" href="#">IF</a>
     				</div>
     				<ul class="nav navbar-nav">
-      					<li><a href="https://emrin.github.io/X/index.html"></a></li>
+      					<li class="active"><a href="https://emrin.github.io/X/index.html"></a></li>
       					<li><a href="https://emrin.github.io/X/bitcoin/index.html">Page 1</a></li>
       					<li><a href="#">Page 2</a></li>
       					<li><a href="#">Page 3</a></li>
@@ -29,8 +29,8 @@
 		</nav>
 		<div class="container">
   			<ul class="nav nav-tabs" role="tablist">
-    				<li><a href="https://emrin.github.io/X/">Home</a></li>
-    				<li class="active"><a href="https://emrin.github.io/X/bitcoin/index.html">Bitcoins</a></li>
+    				<li class="active"><a href="https://emrin.github.io/X/">Home</a></li>
+    				<li><a href="https://emrin.github.io/X/bitcoin/index.html">Bitcoins</a></li>
     				<li><a href="#">Yes</a></li>
     				<li><a href="#">Ok</a></li>
  		 	</ul>
