--- a/index.html
+++ b/index.html
@@ -14,6 +14,26 @@
 		<script src="https://emrin.github.io/X/prg.js"></script>
 	</head>
 	<body>
+		<nav class="navbar navbar-inverse">
+        		<div class="container">
+         			<div class="navbar-header">
+            				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+              					<span class="sr-only">Toggle navigation</span>
+              					<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+              					<span class="icon-bar"></span>
+            				</button>
+            				<a class="navbar-brand" href="#">Bitcoin</a>
+          			</div>
+          			<div class="navbar-collapse collapse">
+            				<ul class="nav navbar-nav">
+              					<li><a href="https://emrin.github.io/index.html">Home</a></li>
+						<li class="active"><a href="http://emrin.github.io/bitcoin/index.html">Bitcoin</a></li>
+	      					<li><a href="#">Explorer</a></li>
+            				</ul>
+          			</div>
+        		</div>
+      		</nav>
 		<nav class="navbar navbar-default">
   			<div class="container-fluid">
     				<div class="navbar-header">
