--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -14,18 +14,25 @@
 		<script src="https://emrin.github.io/X/prg.js"></script>
 	</head>
 	<body>
-		<nav class="navbar navbar-default">
-  			<div class="container-fluid">
-    				<div class="navbar-header">
-      					<a class="navbar-brand" href="#">IF</a>
-    				</div>
-    				<ul class="nav navbar-nav">
-      					<li class="active"><a href="https://emrin.github.io/X/index.html"></a></li>
-      					<li><a href="https://emrin.github.io/X/bitcoin/index.html">Page 1</a></li>
-      					<li><a href="#">Page 2</a></li>
-      					<li><a href="#">Page 3</a></li>
-    				</ul>
-  			</div>
+		<nav class="navbar navbar-inverse">
+        		<div class="container">
+         			<div class="navbar-header">
+            				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+              					<span class="sr-only">Toggle navigation</span>
+              					<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+              					<span class="icon-bar"></span>
+            				</button>
+            				<a class="navbar-brand" href="#">Bitcoin</a>
+          			</div>
+          			<div class="navbar-collapse collapse">
+            				<ul class="nav navbar-nav">
+              					<li><a href="https://emrin.github.io/index.html">Home</a></li>
+						<li class="active"><a href="http://emrin.github.io/bitcoin/index.html">Bitcoin</a></li>
+	      					<li><a href="#">Explorer</a></li>
+            				</ul>
+          			</div>
+        		</div>
 		</nav>
 		<div class="container">
   			<ul class="nav nav-tabs" role="tablist">
