--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -36,8 +36,8 @@
 		</nav>
 		<div class="container">
   			<ul class="nav nav-tabs" role="tablist">
-    				<li class="active"><a href="https://emrin.github.io/X/">Home</a></li>
-    				<li><a href="https://emrin.github.io/X/bitcoin/index.html">Bitcoins</a></li>
+    				<li><a href="https://emrin.github.io/X/">Home</a></li>
+    				<li class="active"><a href="https://emrin.github.io/X/bitcoin/index.html">Bitcoins</a></li>
     				<li><a href="#">Yes</a></li>
     				<li><a href="#">Ok</a></li>
  		 	</ul>
