--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -28,8 +28,7 @@
           		<div class="navbar-collapse collapse">
             			<ul class="nav navbar-nav">
               				<li><a href="https://emrin.github.io/index.html">Home</a></li>
-					<li class="active"><a href="http://emrin.github.io/bitcoin/index.html">Bitcoin</a></li>
-	      				<li><a href="#">Explorer</a></li>
+					<li class="active"><a href="http://emrin.github.io/bitcoin/index.html">Bitcoins</a></li>
             			</ul>
           		</div>
         	</div>
