--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           		<div class="navbar-collapse collapse">
             			<ul class="nav navbar-nav">
               				<li class="active"><a href="https://emrin.github.io/index.html">Home</a></li>
-											<li><a href="http://emrin.github.io/bitcoin/index.html">Bitcoin</a></li>
+					<li><a href="http://emrin.github.io/bitcoin/index.html">Bitcoins</a></li>
             			</ul>
           		</div>
         	</div>
