--- a/index.html
+++ b/index.html
@@ -21,14 +21,13 @@
               				<span class="sr-only">Toggle navigation</span>
               				<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
-              				<span class="icon-bar"></span>
             			</button>
             			<a class="navbar-brand" href="#">Bitcoin</a>
           		</div>
           		<div class="navbar-collapse collapse">
             			<ul class="nav navbar-nav">
-              				<li class="active"><a href="https://emrin.github.io/index.html">Home</a></li>
-					<li><a href="http://emrin.github.io/bitcoin/index.html">Bitcoins</a></li>
+              				<li class="active"><a href="https://emrin.github.io/X/">Home</a></li>
+					<li><a href="https://emrin.github.io/X/bitcoin/index.html">Bitcoins</a></li>
             			</ul>
           		</div>
         	</div>
