--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -27,8 +27,8 @@
           		</div>
           		<div class="navbar-collapse collapse">
             			<ul class="nav navbar-nav">
-              				<li><a href="https://emrin.github.io/index.html">Home</a></li>
-					<li class="active"><a href="http://emrin.github.io/bitcoin/index.html">Bitcoins</a></li>
+              				<li><a href="https://emrin.github.io/X/">Home</a></li>
+					<li class="active"><a href="https://emrin.github.io/bitcoin/index.html">Bitcoins</a></li>
             			</ul>
           		</div>
         	</div>
