--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           		<div class="navbar-collapse collapse">
             			<ul class="nav navbar-nav">
               				<li class="active"><a href="https://emrin.github.io/X/">Home</a></li>
-					<li><a href="https://emrin.github.io/X/bitcoin/index.html">Bitcoins</a></li>
+					<li><a href="https://emrin.github.io/X/bitcoin/">Bitcoins</a></li>
             			</ul>
           		</div>
         	</div>
@@ -36,7 +36,7 @@
 		<div class="container">
   			<ul class="nav nav-tabs" role="tablist">
     				<li class="active"><a href="https://emrin.github.io/X/">Home</a></li>
-    				<li><a href="https://emrin.github.io/X/bitcoin/index.html">Bitcoins</a></li>
+    				<li><a href="https://emrin.github.io/X/bitcoin/">Bitcoins</a></li>
     				<li><a href="#">Yes</a></li>
     				<li><a href="#">Ok</a></li>
  		 	</ul>
