--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -23,7 +23,7 @@
 					<span class="icon-bar"></span>
               				<span class="icon-bar"></span>
             			</button>
-            			<a class="navbar-brand" href="#">Bitcoin</a>
+            			<a class="navbar-brand" href="https://emrin.github.io/X/">IF</a>
           		</div>
           		<div class="navbar-collapse collapse">
             			<ul class="nav navbar-nav">
