--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               				<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
             			</button>
-            			<a class="navbar-brand" href="#">IF</a>
+            			<a class="navbar-brand" href="https://emrin.github.io/X/">IF</a>
           		</div>
           		<div class="navbar-collapse collapse">
             			<ul class="nav navbar-nav">
