--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -51,6 +51,12 @@
         			<code id="demo" class="json kljs"></code>
     			</pre>
 			</div>
+					<div class="row">
+			<div class="col-lg-12 col-xs-6">
+    			<pre>
+        			<code id="demo2" class="json kljs"></code>
+    			</pre>
+</div>
 		</div>
 		 <a href="https://emrin.github.io/X/bitcoin/index.html">Link to other page.</a> 
 	</body>
