--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -45,6 +45,10 @@
  			<h1>IF - Explorateur Bitcoin</h1>
   			<p>Emrin Angelov</p> 
 		</div>
+		<div class="col-sm-10">          
+        		<input type="password" class="form-control" id="pwd" placeholder="Enter Request" name="pwd">
+      		</div>
+		<button type="button" class="btn btn-default">Default</button>
 		<div class="row">
 			<div class="col-lg-12 col-xs-6">
     			<pre>
