--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -48,7 +48,7 @@
 		<div class="col-sm-10">          
         		<input type="password" class="form-control" id="pwd" placeholder="Enter Request" name="pwd">
       		</div>
-		<button type="button" class="btn btn-default">Default</button>
+		<button type="button" class="btn btn-default">OK</button>
 		<div class="row">
 			<div class="col-lg-12 col-xs-6">
     			<pre>
