--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -45,8 +45,9 @@
  			<h1>IF - Explorateur Bitcoin</h1>
   			<p>Emrin Angelov</p> 
 		</div>
-		<div class="col-sm-10">          
-        		<input type="password" class="form-control" id="pwd" placeholder="Enter Request" name="pwd">
+		<div class="col-sm-10">
+			<input id="msg" type="text" class="form-control" name="msg" placeholder="Enter Request">
+        		<!-- input type="password" class="form-control" id="pwd" placeholder="Enter Request" name="pwd"-->
       		</div>
 		<button type="button" class="btn btn-default">OK</button>
 		<div class="row">
