--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -45,6 +45,14 @@
  			<h1>IF - Explorateur Bitcoin</h1>
   			<p>Emrin Angelov</p> 
 		</div>
+		<form action="/action_page.php">
+    			<div class="input-group">
+      				<input type="text" class="form-control" placeholder="Search" name="search">
+      				<div class="input-group-btn">
+        				<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+      				</div>
+    			</div>
+  		</form>
 		<div class="col-sm-10">
 			<input id="msg" type="text" class="form-control" name="msg" placeholder="Enter Request">
         		<!-- input type="password" class="form-control" id="pwd" placeholder="Enter Request" name="pwd"-->
