--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -47,17 +47,12 @@
 		</div>
 		<form action="/action_page.php">
     			<div class="input-group">
-      				<input type="text" class="form-control" placeholder="Search" name="search">
+      				<input type="text" class="form-control" placeholder="Enter Request" name="search">
       				<div class="input-group-btn">
-        				<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+        				<button onclick="startSearch()" class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
       				</div>
     			</div>
   		</form>
-		<div class="col-sm-10">
-			<input id="msg" type="text" class="form-control" name="msg" placeholder="Enter Request">
-        		<!-- input type="password" class="form-control" id="pwd" placeholder="Enter Request" name="pwd"-->
-      		</div>
-		<button type="button" class="btn btn-default">OK</button>
 		<div class="row">
 			<div class="col-lg-12 col-xs-6">
     			<pre>
