--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -49,7 +49,7 @@
     			<div class="input-group">
       				<input type="text" class="form-control" placeholder="Enter Request" name="search">
       				<div class="input-group-btn">
-        				<button onclick="startSearch()" class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+        				<button onclick="startSearch()" class="btn btn-default" type="submit">OK</button>
       				</div>
     			</div>
   		</form>
