--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -58,6 +58,12 @@
         			<code id="demo2" class="json kljs"></code>
     			</pre>
 			</div>
+						
+			<div class="col-lg-12 col-xs-6">
+    			<pre>
+        			<code id="demo3" class="json kljs"></code>
+    			</pre>
+			</div>
 		</div>
 	</body>
 </html>
