--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -64,6 +64,18 @@
         			<code id="demo3" class="json kljs"></code>
     			</pre>
 			</div>
+			
+			<div class="col-lg-12 col-xs-6">
+    			<pre>
+        			<code id="demo4" class="json kljs"></code>
+    			</pre>
+			</div>
+			
+			<div class="col-lg-12 col-xs-6">
+    			<pre>
+        			<code id="demo5" class="json kljs"></code>
+    			</pre>
+			</div>
 		</div>
 	</body>
 </html>
