--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -38,7 +38,7 @@
  			<h1>IF - Explorateur Bitcoin</h1>
   			<p>Emrin Angelov</p> 
 		</div>
-		<form action="/action_page.php">
+		<form>
     			<div class="input-group">
       				<input type="text" class="form-control" placeholder="Enter Request" name="search">
       				<div class="input-group-btn">
