--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -12,6 +12,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src="../custom.js"></script>
 		<script src="https://emrin.github.io/X/prg.js"></script>
+		<script type="text/javascript">homePageLoading();</script>
 	</head>
 	<body>
 		<nav class="navbar navbar-inverse">
