--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -13,6 +13,7 @@
 		<script src="../custom.js"></script>
 		<script src="https://emrin.github.io/X/prg.js"></script>
 		<script type="text/javascript">homePageLoading();</script>
+		<script type="text/javascript">startSearch();</script>
 	</head>
 	<body>
 		<nav class="navbar navbar-inverse">
