--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -13,7 +13,7 @@
 		<script src="../custom.js"></script>
 		<script src="https://emrin.github.io/X/prg.js"></script>
 		<script type="text/javascript">homePageLoading();</script>
-		<script type="text/javascript">startSearch();</script>
+		<script type="text/javascript">startSearch("demo","https://api.blockcypher.com/v1/btc/main/blocks/294322?txstart=1&limit=1");</script>
 	</head>
 	<body>
 		<nav class="navbar navbar-inverse">
